--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-HELP.md
+### Maven ###
 target/
+mvn*
+mvnw
+*/mvn*
+.mvn*
+.mvnw*
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+om.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+logs/
+*.log
 
 ### STS ###
 .apt_generated
@@ -11,23 +24,24 @@ target/
 .project
 .settings
 .springBeans
-.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+.DS_Store
+.vscode
 
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+nbproject/private/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
-### VS Code ###
-.vscode/
+# stock
+log.home_IS_UNDEFINED/
+
+
