feat: add service

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=12000
 spring.datasource.driver-class-name=org.sqlite.JDBC
 #\u6570\u636E\u5E93\u5730\u5740
-spring.datasource.url=jdbc:sqlite:./dashu.test.db
+spring.datasource.url=jdbc:sqlite:./dashu.db
 #\u6BCF\u6B21\u542F\u52A8\u66F4\u6539\u6570\u636E\u8868\u7ED3\u6784
 spring.jpa.hibernate.ddl-auto=update
 #\u663E\u793A\u6570\u636E\u5E93\u64CD\u4F5C\u8BB0\u5F55
